--- a/app/style.css
+++ b/app/style.css
@@ -33,7 +33,7 @@ header p {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  background: #fff;
+  background: #f8f8f8;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -89,28 +89,60 @@ header p {
   width: 24px;
   height: 24px;
 }
-a{
-  text-decoration: none;
-}
+
 
 button a {
-  background-color: #4CAF50;
+  background-color: #ADD8E6; /* Azul claro */
   color: white;
   border: none;
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 15px 30px; /* Aumentado */
+  font-size: 18px; /* Texto maior */
   cursor: pointer;
-  border-radius: 5px;
-  text-decoration: none;
+  border-radius: 8px; /* Arredondamento mais suave */
+  
 }
 
 button:hover {
-  background-color: #45a049; 
-  text-decoration: none;
+  background-color: #87CEFA; /* Azul claro mais intenso ao passar o mouse */
+  
 }
 
 button:focus {
   outline: none; 
-  box-shadow: none; 
-  text-decoration: none;
+  box-shadow: 0 0 5px #87CEFA; /* Destaque ao focar */
+  
+}
+i {
+  font-size: 15px; /* Ajusta o tamanho */
+  color: #45687e; /* Ajusta a cor */
+}
+
+.social-media {
+  display: flex; /* Ativa o layout flexbox */
+  justify-content: center; /* Centraliza os itens horizontalmente */
+  gap: 20px; /* Espaçamento entre os links */
+  margin-top: 10px;
+}
+
+.social-media a {
+  display: flex;
+  align-items: center; /* Alinha ícone e texto verticalmente */
+  text-decoration: none; /* Remove sublinhado */
+  color: #45687e; /* Cor padrão do texto */
+  font-family: Arial, sans-serif; /* Mesma fonte do site */
+  font-size: 1rem;
+}
+
+.social-media a i {
+  margin-right: 8px; /* Espaço entre ícone e texto */
+  font-size: 1.5rem; /* Tamanho do ícone */
+  color: #45687e; /* Cor do ícone */
+}
+
+.social-media a:hover i {
+  color: #2557c4; /* Azul claro ao passar o mouse no ícone */
+}
+
+.social-media a:hover span {
+  color: #2557c4; /* Azul claro ao passar o mouse no texto */
 }
